--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.2",
+    "@next/font": "^14.2.15",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
