--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
