--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,8 @@
   "root": true,
   "extends": [
     "next/core-web-vitals",
-    "next/typescript",
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@next/next/recommended"
@@ -13,23 +13,23 @@
     "es2020": true,
     "node": true
   },
-  "parser": "@babel/eslint-parser",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "requireConfigFile": false,
-    "babelOptions": {
-      "presets": ["next/babel"]
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
   },
-  "plugins": ["react", "import", "@next/next"],
+  "plugins": ["react", "import", "@next/next", "@typescript-eslint"],
   "rules": {
     "no-console": ["error"],
     "react/prop-types": "off",
-    "no-use-before-define": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       "error",
       {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [".tsx", ".ts", ".jsx", ".js"]
       }
     ],
     "react/jsx-tag-spacing": [
@@ -38,7 +38,6 @@
         "beforeSelfClosing": "always"
       }
     ],
-    "no-shadow": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "off",
     "import/prefer-default-export": "off",
@@ -65,7 +64,7 @@
         }
       }
     ],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "newline-after-var": ["error", "always"],
     "padding-line-between-statements": [
       "error",
