--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
+    "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
