--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.2",
     "@next/font": "^14.2.15",
+    "mongoose": "^8.7.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
