--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.2",
     "@next/font": "^14.2.15",
+    "mongoose": "^8.7.1",
     "next": "14.2.14",
     "pg": "^8.13.0",
     "react": "^18",
