allow eslint overrides on no-var for *.d.ts files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,5 +80,13 @@
     "react": {
       "version": "detect"
     }
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.d.ts"],
+      "rules": {
+        "no-var": "off"
+      }
+    }
+  ]
 }
