remove console logs and set no-console back to error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
   },
   "plugins": ["react", "import", "@next/next", "@typescript-eslint"],
   "rules": {
-    "no-console": ["warn"],
+    "no-console": ["error"],
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
