--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -15,24 +16,27 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.2",
     "@next/font": "^14.2.15",
-    "mongoose": "^8.7.1",
     "next": "14.2.14",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
+    "reflect-metadata": "^0.2.2",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.8",
-    "@types/node": "^20",
+    "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
+    "typescript": "^5.6.3"
   }
 }
