--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json"
   },
   "dependencies": {
+    "@auth/typeorm-adapter": "^2.7.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.2",
     "@next/font": "^14.2.15",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "next": "14.2.14",
+    "next-auth": "^4.24.8",
     "pg": "^8.13.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
