--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.14",
     "pg": "^8.13.0",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
