--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "^14.2.15",
     "next": "14.2.14",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
