--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/font": "^14.2.15",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "gsap": "^3.12.5",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
