--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@toolpad/core": "^0.8.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "gsap": "^3.12.5",
+    "cloudinary": "^2.5.1",
+    "mui-file-upload": "^1.0.0-alpha.7",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
