--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@auth/typeorm-adapter": "^2.7.0",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
@@ -20,6 +22,8 @@
     "@toolpad/core": "^0.8.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
+    "mui-file-upload": "^1.0.0-alpha.7",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
