--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.2",
     "@next/font": "^14.2.15",
+    "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
@@ -43,6 +44,7 @@
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.6.3"
