--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "typeorm": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
-    "@auth/typeorm-adapter": "^2.7.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "^14.2.15",
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
@@ -46,7 +45,6 @@
     "eslint-config-next": "14.2.14",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.20",
     "typescript": "^5.6.3"
   }
 }
