--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
+    "typescript": "^5.7.2",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.7",
@@ -44,7 +45,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "prisma": "^5.22.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "ts-node": "^10.9.2"
   }
 }
