--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-query": "^3.39.3",
     "reflect-metadata": "^0.2.2",
     "swiper": "^11.1.14",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "eslint": "^8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.8",
@@ -42,7 +43,6 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
-    "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2"
