--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
-    "typescript": "^5.7.2",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.7",
@@ -22,10 +21,13 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
+    "eslint": "^8",
     "gsap": "^3.12.5",
     "next": "14.2.14",
+    "eslint-config-next": "^14.2.14",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
@@ -33,8 +35,8 @@
     "react-query": "^3.39.3",
     "reflect-metadata": "^0.2.2",
     "swiper": "^11.1.14",
-    "zod": "^3.23.8",
-    "eslint": "^8"
+    "typescript": "^5.7.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.8",
@@ -43,8 +45,6 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
-    "eslint-config-next": "14.2.14",
-    "prisma": "^5.22.0",
     "ts-node": "^10.9.2"
   }
 }
