--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "email": "email dev --dir ./src/",
     "build": "prisma generate && next build",
     "start": "next start",
     "postinstall": "prisma generate",
