--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "^14.2.15",
     "@prisma/client": "^5.22.0",
+    "@react-email/components": "^0.0.28",
+    "@react-email/render": "^1.0.2",
+    "@sendgrid/mail": "^8.1.4",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "eslint": "^8",
+    "eslint-config-next": "^14.2.14",
     "gsap": "^3.12.5",
     "next": "14.2.14",
-    "eslint-config-next": "^14.2.14",
     "next-auth": "^4.24.8",
     "pg": "^8.13.0",
     "prisma": "^5.22.0",
