--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
     "reflect-metadata": "^0.2.2",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.14",
     "typescript": "^5.7.2",
     "zod": "^3.23.8"
