--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       // "@/*": ["*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(main)/pricing/page.tsx.comment"],
   "exclude": ["node_modules"]
 }
